--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,154 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MP1 Starter</title>
+  <title>Little Computer 3</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,600" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <div class="test"> My name is Anthony.</div>
-  <div class="cat">
-    <img src="./media/cat.jpg" alt="Cat">
+
+  <!-- mac modal -->
+
+  <div id="mac-modal" class="modal hide">
+    <i id="mac-close" class="fa fa-times close" aria-hidden="true"></i>
+    <p>Mac desktop application coming soon...</p>
   </div>
 
+  <!-- windows modal -->
+
+  <div id="windows-modal" class="modal hide">
+    <i id="windows-close" class="fa fa-times close" aria-hidden="true"></i>
+    <p>Windows desktop application coming soon...</p>
+  </div>
+
+  <!-- main page -->
+
+  <div id="header">
+    <h1>Little Computer 3</h1>
+    <ul>
+      <li class="header-section selected" id="download">Download</li>
+      <li class="header-section" id="about">About</li>
+      <li class="header-section" id="features">Features</li>
+      <li class="header-section" id="openSource">Open Source</li>
+    </ul>
+  </div>
+
+  <div class="tile" id="first_tile">
+    <h1>Little Computer 3</h1>
+    <div class="cpu">
+      <!-- wires -->
+      <canvas id="wires"></canvas>
+      <!-- left -->
+      <div class="box pc"></div>
+      <div class="box alu"></div>
+      <div class="box isdu"></div>
+      <!-- middle -->
+      <div class="box mar"></div>
+      <div class="box reg"></div>
+      <div class="box mdr"></div>
+      <div class="box ir"></div>
+      <!-- right -->
+      <div class="box mem"></div>
+    </div>
+    <h2>Learn assembly with a free IDE build on the web</h2>
+    <div class="buttons">
+      <button class="button primary" id="cloud-button"><i class="fa fa-cloud" aria-hidden="true"></i> Cloud</button>
+      <button class="button secondary" id="mac-button"><i class="fa fa-download" aria-hidden="true"></i> Mac</button>
+      <button class="button secondary" id="windows-button"><i class="fa fa-download" aria-hidden="true"></i> Windows</button>
+    </div>
+
+
+  </div>
+  <div class="tile" id="second_tile">
+    <p>LC3 (Little Computer 3) is an educational assembly programming language. If this is your first time coding or you have experience with a high-level programming language, there are many benifits to learning how assembly code is written.</p>
+
+    <div class="grid">
+      <div class="item">
+        <div class="item-circle"><i class="fa fa-tachometer" aria-hidden="true"></i></div>
+        <h1>Efficient</h1>
+        <p>It runs directly on the proccessor.</p>
+      </div>
+      <div class="item">
+        <div class="item-circle"><i class="fa fa-cogs" aria-hidden="true"></i></div>
+        <h1>Low Level</h1>
+        <p>Visualize the memory stack.</p>
+      </div>
+      <div class="item">
+        <div class="item-circle"><i class="fa fa-file-code-o" aria-hidden="true"></i></div>
+        <h1>Code</h1>
+        <p>Program in either binary or assembly.</p>
+      </div>
+      <div class="item">
+        <div class="item-circle"><i class="fa fa-keyboard-o" aria-hidden="true"></i></div>
+        <h1>Keyboard</h1>
+        <p>Input for programs.</p>
+      </div>
+      <div class="item">
+        <div class="item-circle"><i class="fa fa-building-o" aria-hidden="true"></i></div>
+        <h1>Foundation</h1>
+        <p>Great for aspiring computer engineers.</p>
+      </div>
+      <div class="item">
+        <div class="item-circle"><i class="fa fa-terminal" aria-hidden="true"></i></div>
+        <h1>I/O</h1>
+        <p>Terminal access to print results.</p>
+      </div>
+    </div>
+
+  </div>
+  <div class="tile" id="third_tile">
+    <i id="left-arrow" class="fa fa-angle-left arrow left" aria-hidden="true"></i>
+    <i id="right-arrow" class="fa fa-angle-right arrow right" aria-hidden="true"></i>
+      <p id="t-1">
+        The advanced debugger allows you to view the memory dump in any format.
+      </p>
+      <video id="v-1" class="videos" autoplay loop muted>
+        <source src="../media/debugger.mp4" type="video/mp4">
+      </video>
+
+      <p id="t-2" class="hide">
+        Peek into the contents of each of the eight general purpose registers, program counter, and instruction regsiter.
+      </p>
+      <video id="v-2" class="videos hide" width="400" autoplay loop muted>
+        <source src="../media/registers.mp4" type="video/mp4">
+      </video>
+
+      <p id="t-3" class="hide">
+        Change the color scheme of the editor.
+      </p>
+      <video id="v-3" class="videos hide" width="400" autoplay loop muted>
+        <source src="../media/theme.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+  <div class="tile" id="fourth_tile" style="color:white;">
+      <h1 style="text-align:center;color:white">Open Source</h1>
+      <br>
+      <p>The entire project is open source and easily customizable.</p>
+      <ul>
+        <li>Make a robust autograder</li>
+        <li>Design a custom theme</li>
+        <li>Create coding challenges</li>
+        <li>Collect metadata</li>
+      </ul>
+      <ul>
+        <li>Access raw data from memory and registers - <i>with one line of code!</i></li>
+        <li>Look up the address of a label - <i>with one line of code!</i></li>
+        <li>Library of functions to switch between data types</li>
+        <li>Advanced users can impliment the unused opcode</li>
+      </ul>
+  </div>
+  <div id="footer">
+    <p><a href="http://schultheiss.io/connect.html"><i><i class="fa fa-code" aria-hidden="true"></i> with <i class="fa fa-heart-o" aria-hidden="true"></i> by</i> <b>Joshua Schultheiss</a></b></p>
+    <ul>
+      <li><a href="mailto:jschlth2@illinois.edu?Subject=Little%20Computer%203%20-%20Feedback"><i class="fa fa-envelope social" aria-hidden="true"></i></a></li>
+      <li><a href="https://github.com/jschlth2"><i class="fa fa-github-alt social" aria-hidden="true"></i></a></li>
+      <li><a href="https://linkedin.com/in/jschlth"><i class="fa fa-linkedin social" aria-hidden="true"></i></a></li>
+      <li><a href="https://twitter.com/schultheissj"><i class="fa fa-twitter social" aria-hidden="true"></i></a></li>
+    </ul>
+  </div>
   <script src="lib/jquery-2.1.3.min/index.js"></script>
   <script src="js/script.js"></script>
   <script src="http://localhost:35729/livereload.js"></script>
