--- a/public/index.html
+++ b/public/index.html
@@ -106,21 +106,21 @@
         The advanced debugger allows you to view the memory dump in any format.
       </p>
       <video id="v-1" class="videos" autoplay loop muted>
-        <source src="../media/debugger.mp4" type="video/mp4">
+        <source src="media/debugger.mp4" type="video/mp4">
       </video>
 
       <p id="t-2" class="hide">
         Peek into the contents of each of the eight general purpose registers, program counter, and instruction regsiter.
       </p>
       <video id="v-2" class="videos hide" width="400" autoplay loop muted>
-        <source src="../media/registers.mp4" type="video/mp4">
+        <source src="media/registers.mp4" type="video/mp4">
       </video>
 
       <p id="t-3" class="hide">
         Change the color scheme of the editor.
       </p>
       <video id="v-3" class="videos hide" width="400" autoplay loop muted>
-        <source src="../media/theme.mp4" type="video/mp4">
+        <source src="media/theme.mp4" type="video/mp4">
       </video>
     </div>
   </div>
