--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <li class="header-section selected" id="download">Download</li>
       <li class="header-section" id="about">About</li>
       <li class="header-section" id="features">Features</li>
-      <li class="header-section" id="openSource">Open Source</li>
+      <li class="header-section" id="opensource">Open Source</li>
     </ul>
   </div>
 
@@ -102,10 +102,10 @@
   <div class="tile" id="third_tile">
     <i id="left-arrow" class="fa fa-angle-left arrow left" aria-hidden="true"></i>
     <i id="right-arrow" class="fa fa-angle-right arrow right" aria-hidden="true"></i>
-      <p id="t-1">
+      <p id="t-1" class="hide">
         The advanced debugger allows you to view the memory dump in any format.
       </p>
-      <video id="v-1" class="videos" autoplay loop muted>
+      <video id="v-1" class="videos hide" autoplay loop muted>
         <source src="media/debugger.mp4" type="video/mp4">
       </video>
 
@@ -116,10 +116,10 @@
         <source src="media/registers.mp4" type="video/mp4">
       </video>
 
-      <p id="t-3" class="hide">
+      <p id="t-3" class="">
         Change the color scheme of the editor.
       </p>
-      <video id="v-3" class="videos hide" width="400" autoplay loop muted>
+      <video id="v-3" class="videos" width="400" autoplay loop muted>
         <source src="media/theme.mp4" type="video/mp4">
       </video>
     </div>
@@ -127,19 +127,17 @@
   <div class="tile" id="fourth_tile" style="color:white;">
       <h1 style="text-align:center;color:white">Open Source</h1>
       <br>
-      <p>The entire project is open source and easily customizable.</p>
-      <ul>
-        <li>Make a robust autograder</li>
-        <li>Design a custom theme</li>
-        <li>Create coding challenges</li>
-        <li>Collect metadata</li>
-      </ul>
-      <ul>
-        <li>Access raw data from memory and registers - <i>with one line of code!</i></li>
-        <li>Look up the address of a label - <i>with one line of code!</i></li>
-        <li>Library of functions to switch between data types</li>
-        <li>Advanced users can impliment the unused opcode</li>
-      </ul>
+      <p>The entire project is open source and easily customizable!</p>
+      <br>
+      <br>
+      <p>Make a robust autograder</p>
+      <p>Design a custom theme</p>
+      <p>Create coding challenges</p>
+      <p>Collect metadata</p>
+      <p>Access raw data from memory and registers</p>
+      <p>Look up the address of a label</p>
+      <p>Library of functions to switch between data types</p>
+      <p>Impliment the unused opcode</p>
   </div>
   <div id="footer">
     <p><a href="http://schultheiss.io/connect.html"><i><i class="fa fa-code" aria-hidden="true"></i> with <i class="fa fa-heart-o" aria-hidden="true"></i> by</i> <b>Joshua Schultheiss</a></b></p>
