--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <title>Little Computer 3</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+  <link rel="icon" href="media/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Titillium+Web" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,600" rel="stylesheet">
 </head>
