--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,6 @@
 
     <!-- MYSYLE -->
     <link rel="stylesheet" href="css/styles.css">
-
-    <!-- DEBUGGING -->
-    <script src="http://localhost:35729/livereload.js"></script>
   </head>
   <body>
 
@@ -60,7 +57,7 @@
       <p>Save, Delete, Link, Download,
     </div>-->
     <div id="editor">
-      <textarea id="code" style="z-index:2;">
+      <textarea id="code" style="z-index:2;" onkeypress="test_func_13();">
 
         ; R0 - return char
         ; R1 - char count
@@ -338,5 +335,8 @@
 
     <!-- MYCODE -->
     <script src="js/script.js"></script>
+
+        <!-- DEBUGGING -->
+        <script src="http://localhost:35729/livereload.js"></script>
   </body>
 </html>
