remove codemirror.js. refactor init method to be called on creation.

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -10,15 +10,8 @@
 
 
   <body>
-    <div id="ide">
 
-      <textarea class="codemirror"></textarea>
-
-      <div class="debugger">
-        <!-- TODO -->
-      </div>
-
-    </div>
+    <div id="ide"></div>
 
     <!-- jQuery -->
     <!-- TODO self host this -->
