remove codemirror.js import. refactor lc3 to have /core and /gui sub-directories.

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -17,11 +17,8 @@
     <!-- TODO self host this -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <!-- codemirror -->
-    <script src="../js/lib/codemirror.js"></script>
-
     <!-- LC3 -->
-    <script src="../js/lib/lc3/subroutines.js"></script>
+    <script src="../js/lib/lc3/core/subroutines.js"></script>
     <script src="../js/lib/lc3/main.js"></script>
 
     <!-- main -->
